monticore-generator/src/test/resources/cocos/invalid/A4035/A4035b.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4035;

grammar A4035b {

  symbol S = "s" Name  ";" ;

  symbol T extends S = "t" Name ";" ;

  symbolrule S = b:boolean ;

  symbolrule T = b:String ;


}
